add use-case images for customer-relationship page

--- a/customer-relationship.html
+++ b/customer-relationship.html
@@ -829,7 +829,7 @@ Icon for services and Projects -->
                     <!-- First 4 use case items -->
                     <div class="service-item1 style-1">
                         <div class="service-image">
-                            <img src="images/Innomiant solutions/Usecase-1.png" class="img-fluid usecase-center" alt="" decoding="async">
+                            <img src="images/innomaint/customer-relationship/1.webp" class="img-fluid usecase-center" alt="" decoding="async">
                         </div>
                         <div class="service-desc">
                             <div class="service-title">
@@ -845,7 +845,7 @@ Icon for services and Projects -->
                     <!-- Add the rest of the initial 4 items -->
                     <div class="service-item1 style-1">
                         <div class="service-image">
-                            <img src="images/services_Images/ARVRImages/creative.png" class="img-fluid" alt="">
+                            <img src="images/innomaint/customer-relationship/2.webp" class="img-fluid" alt="">
                         </div>
                         <div class="service-desc">
                             <div class="service-title">
@@ -863,7 +863,7 @@ Icon for services and Projects -->
  
                     <div class="service-item1 style-1">
                         <div class="service-image">
-                            <img src="images/services_Images/ARVRImages/creative.png" class="img-fluid" alt="">
+                            <img src="images/innomaint/customer-relationship/3.webp" class="img-fluid" alt="">
                         </div>
                         <div class="service-desc">
                             <div class="service-title">
@@ -878,10 +878,10 @@ Icon for services and Projects -->
                             </span>
                         </div>
                     </div>
- 
+                    
                     <div class="service-item1 style-1 active">
                         <div class="service-image">
-                            <img src="images/services_Images/ARVRImages/grow.png" class="img-fluid" alt="">
+                            <img src="images/innomaint/customer-relationship/4.webp" class="img-fluid" alt="">
                         </div>
                         <div class="service-desc">
                             <div class="service-title">
@@ -898,7 +898,7 @@ Icon for services and Projects -->
                     <div class="extra-usecases" style="display:none;">
                         <div class="service-item1 style-1">
                             <div class="service-image">
-                                <img src="images/services_Images/ARVRImages/patent.png" class="img-fluid" alt="">
+                                <img src="images/innomaint/customer-relationship/5.webp" class="img-fluid" alt="">
                             </div>
                             <div class="service-desc">
                                 <div class="service-title">
@@ -913,7 +913,7 @@ Icon for services and Projects -->
  
                         <div class="service-item1 style-1">
                             <div class="service-image">
-                                <img src="images/services_Images/ARVRImages/creative.png" class="img-fluid" alt="">
+                                <img src="images/innomaint/customer-relationship/6.webp" class="img-fluid" alt="">
                             </div>
                             <div class="service-desc">
                                 <div class="service-title">
@@ -931,7 +931,7 @@ Icon for services and Projects -->
  
                         <div class="service-item1 style-1">
                             <div class="service-image">
-                                <img src="images/services_Images/ARVRImages/creative.png" class="img-fluid" alt="">
+                                <img src="images/innomaint/customer-relationship/7.webp" class="img-fluid" alt="">
                             </div>
                             <div class="service-desc">
                                 <div class="service-title">
@@ -949,7 +949,7 @@ Icon for services and Projects -->
  
                         <div class="service-item1 style-1 active">
                             <div class="service-image">
-                                <img src="images/services_Images/ARVRImages/grow.png" class="img-fluid" alt="">
+                                <img src="images/innomaint/customer-relationship/8.webp" class="img-fluid" alt="">
                             </div>
                             <div class="service-desc">
                                 <div class="service-title">
@@ -964,7 +964,7 @@ Icon for services and Projects -->
 
                         <div class="service-item1 style-1 active">
                           <div class="service-image">
-                              <img src="images/services_Images/ARVRImages/grow.png" class="img-fluid" alt="">
+                              <img src="images/innomaint/customer-relationship/9.webp" class="img-fluid" alt="">
                           </div>
                           <div class="service-desc">
                               <div class="service-title">
@@ -979,22 +979,7 @@ Icon for services and Projects -->
 
                         <div class="service-item1 style-1 active">
                           <div class="service-image">
-                              <img src="images/services_Images/ARVRImages/grow.png" class="img-fluid" alt="">
-                          </div>
-                          <div class="service-desc">
-                              <div class="service-title">
-                                  <h4 class="project-heading">Insurance</h4>
-                              </div>
-                              <p>Insurance agencies can customize to suit their needs. It can help automate tasks like marketing campaigns, policy sales and renewals, and customer service, all in one place.</p>
-                              <span class="rounded-button1">
-                                  <i class="fas fa-industry"></i>
-                              </span>
-                          </div>
-                        </div>
-
-                        <div class="service-item1 style-1 active">
-                          <div class="service-image">
-                              <img src="images/services_Images/ARVRImages/grow.png" class="img-fluid" alt="">
+                              <img src="images/innomaint/customer-relationship/10.webp" class="img-fluid" alt="">
                           </div>
                           <div class="service-desc">
                               <div class="service-title">
@@ -1009,7 +994,7 @@ Icon for services and Projects -->
 
                         <div class="service-item1 style-1 active">
                           <div class="service-image">
-                              <img src="images/services_Images/ARVRImages/grow.png" class="img-fluid" alt="">
+                              <img src="images/innomaint/customer-relationship/11.webp" class="img-fluid" alt="">
                           </div>
                           <div class="service-desc">
                               <div class="service-title">
@@ -1024,7 +1009,7 @@ Icon for services and Projects -->
 
                         <div class="service-item1 style-1 active">
                           <div class="service-image">
-                              <img src="images/services_Images/ARVRImages/grow.png" class="img-fluid" alt="">
+                              <img src="images/innomaint/customer-relationship/12.webp" class="img-fluid" alt="">
                           </div>
                           <div class="service-desc">
                               <div class="service-title">
