--- a/offshore-software-development.html
+++ b/offshore-software-development.html
@@ -74,359 +74,8 @@
 
 <!--header start-->
 
-<header id="site-header" class="header">
-    <div id="header-wrap">
-      <div class="container-fluid">
-        <div class="row">
-          <!--menu start-->
-          <div class="col">
-            <nav class="navbar navbar-expand-lg">
-              <a class="navbar-brand logo" href="index.html">
-                <img class="img-fluid" src="images/smi-logo.png" alt="" />
-              </a>
-              <button
-                class="navbar-toggler ht-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <svg width="100" height="100" viewBox="0 0 100 100">
-                  <path
-                    class="line line1"
-                    d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058"
-                  ></path>
-                  <path class="line line2" d="M 20,50 H 80"></path>
-                  <path
-                    class="line line3"
-                    d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942"
-                  ></path>
-                </svg>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mx-auto">
-                  <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a
-                      class="nav-link dropdown-toggle active"
-                      href="#"
-                      data-bs-toggle="dropdown"
-                      >Services</a
-                    >
-                    <ul class="dropdown-menu">
-                      <li class="dropdown-submenu">
-                        <a
-                          class="dropdown-item dropdown-toggle"
-                          href="digital-marketing.html"
-                          >Digital Transformation</a
-                        >
-                        <ul class="dropdown-menu-sub">
-                          <li>
-                            <a
-                              class="dropdown-item"
-                              href="Electronic-Data-Interchange.html"
-                              >Electronic Data Interchange</a
-                            >
-                          </li>
-                          <li>
-                            <a
-                              class="dropdown-item"
-                              href="Ruby-on-Rails.html"
-                              >Ruby On Rails Development</a
-                            >
-                          </li>
-                          <li>
-                            <a
-                              class="dropdown-item"
-                              href="Enterprise-Integration-Services.html"
-                              >Enterprise Integration Services</a
-                            >
-                          </li>
-                          <li>
-                            <a
-                              class="dropdown-item"
-                              href="ar&vr-services.html"
-                              >VR & AR App Development Services</a
-                            >
-                          </li>
-                        </ul>
-                      </li>
-                      <li class="dropdown-submenu">
-                        <a
-                          class="dropdown-item dropdown-toggle"
-                          href="error-404.html"
-                          >IT Consulting</a
-                        >
-                        <ul class="dropdown-menu-sub">
-                          <li>
-                            <a class="dropdown-item" href="iot-development.html"
-                              >IoT Development</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="cloud-computing-services.html"
-                              >Cloud Computing Services</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="ai&ml-development.html"
-                              >AI & ML Development</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="blockchain-development.html"
-                              >Blockchain Development</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="bigdata-consulting-services.html"
-                              >Big Data Consulting Services</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >Database Migration Services</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="offshore-software-development.html"
-                              >Offshore Software Development</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >Managed IT Services</a
-                            >
-                          </li>
-                        </ul>
-                      </li>
-                      <li class="dropdown-submenu">
-                        <a
-                          class="dropdown-item dropdown-toggle"
-                          href="error-404.html"
-                          >Development Services</a
-                        >
-                        <ul class="dropdown-menu-sub">
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >Custom Software Development</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >Mobile App Development</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >Custom Web App Development</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >PHP Development</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >Dotnet Development</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >React Native Development</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >Cross Platform App Development</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >IOS App Development</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >Android App Development</a
-                            >
-                          </li>
-                        </ul>
-                      </li>
-                      <li class="dropdown-submenu">
-                        <a
-                          class="dropdown-item dropdown-toggle"
-                          href="error-404.html"
-                          >Advanced Analytics</a
-                        >
-                        <ul class="dropdown-menu-sub">
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >Data Analytics Services</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >Data Science Services</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >Data Engineering Services</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >Cloud Migration Solutions</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >Business Intelligence Services</a
-                            >
-                          </li>
-                        </ul>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="error-404.html"
-                          >Software Testing & QA Services</a
-                        >
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="error-404.html"
-                          >UI/UX Design Services</a
-                        >
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="error-404.html"
-                          >IT Governance</a
-                        >
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="error-404.html"
-                          >Tech Talent Services</a
-                        >
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a
-                      class="nav-link dropdown-toggle"
-                      href="#"
-                      data-bs-toggle="dropdown"
-                      >Products</a
-                    >
-                    <ul class="dropdown-menu">
-                      <li>
-                        <a class="dropdown-item" href="innomaint.html"
-                          >Innomaint</a
-                        >
-                      </li>
-                      <li class="dropdown-submenu">
-                        <a class="dropdown-item" href="bautomate.html"
-                          >Bautomate</a
-                        >
-                        <ul class="dropdown-menu-sub">
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >Accounts Payable</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >Invoice Automation Software</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >Purchase Order</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >Procure To Pay</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >Capital Expenditure Automation</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >Form Automation</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >IVR Testing Automation</a
-                            >
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="error-404.html"
-                              >HR Automation</a
-                            >
-                          </li>
-                        </ul>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a
-                      class="nav-link dropdown-toggle"
-                      href="#"
-                      data-bs-toggle="dropdown"
-                      >Resources</a
-                    >
-                    <ul class="dropdown-menu">
-                      <li>
-                        <a class="dropdown-item" href="error-404.html"
-                          >Blogs</a
-                        >
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="error-404.html"
-                          >Article</a
-                        >
-                      </li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
-              <div
-                class="right-nav align-items-center d-flex justify-content-end"
-              >
-                <!-- <div class="header-number">
-                  <i class="flaticon-phone-call"></i>
-                  <div>
-                    <span>Call Us:</span>
-                    <a href="tel:+91-234-567-8900">+971 50 421 6518</a>
-                  </div>
-                </div> -->
-                <div class="button-container-anmIcon">
-                  <a class="primary-btn-anmIcon" href="#">
-                    <span class="btn-text-anmIcon">Get a Proposal</span>
-                    <img
-                      class="btn-icon-anmIcon"
-                      src="images/fast-forward.gif"
-                      alt="Fast Forward Icon"
-                    />
-                  </a>
-                </div>
-                <!-- <a class="primary-btn" href="#">Get a Proposal</a>
-          <img src="images/fast-forward.gif"/> -->
-              </div>
-            </nav>
-          </div>
-          <!--menu end-->
-        </div>
-      </div>
-    </div>
-  </header>
+
+<div id="header-placeholder"></div>
 
 
 
@@ -898,6 +547,17 @@ setInterval(() => navigateContent(1), 5000);
 
 <!--== theme-script -->
 <script src="js/theme-script.js"></script>
+
+<script>
+  window.addEventListener('DOMContentLoaded', (event) => {
+      fetch('header.html')
+          .then(response => response.text())
+          .then(html => {
+              document.getElementById('header-placeholder').innerHTML = html;
+          })
+          .catch(error => console.error('Error loading the header:', error));
+  });
+</script>
 
 <!-- inject js end -->
 
