--- a/header.html
+++ b/header.html
@@ -245,15 +245,78 @@
                       >Products</a
                     >
                     <ul class="dropdown-menu">
-                      <li>
-                        <a class="dropdown-item" href="innomaint.html"
-                          >Innomaint</a
-                        >
+                      <li class="dropdown-submenu">
+                       
+                        <a
+                        class="dropdown-item dropdown-toggle"
+                        href="innomaint.html"
+                        >Innomiant</a
+                      >
+                        <ul class="dropdown-menu-sub">
+                          <li>
+                            <a class="dropdown-item" href="error-404.html"
+                              >Enterprise Asset Management Software</a
+                            >
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="error-404.html"
+                              >Facility Management Software</a
+                            >
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="error-404.html"
+                              >Field Service Management software</a
+                            >
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="error-404.html"
+                              >Procurement Management</a
+                            >
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="error-404.html"
+                              >Customer Relationship Management</a
+                            >
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="error-404.html"
+                              >IoT Solutions</a
+                            >
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="error-404.html"
+                              >Visitor Management System Software</a
+                            >
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="error-404.html"
+                              >Workflow Automation</a
+                            >
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="error-404.html"
+                              >OEE Monitoring</a
+                            >
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="error-404.html"
+                              >Asset tracking with ble beacon</a
+                            >
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="error-404.html"
+                              >Team Collaboration Solution</a
+                            >
+                          </li>
+                        </ul>
+                        
                       </li>
                       <li class="dropdown-submenu">
-                        <a class="dropdown-item" href="bautomate.html"
-                          >Bautomate</a
-                        >
+                        <a
+                        class="dropdown-item dropdown-toggle"
+                        href="bautomate.html"
+                        >Bautomate</a
+                      >
                         <ul class="dropdown-menu-sub">
                           <li>
                             <a class="dropdown-item" href="error-404.html"
