--- a/contact.html
+++ b/contact.html
@@ -475,19 +475,13 @@
       </div>
       
     </section> -->
-    <section class="page-title" data-bg-img="images/bg/contact-banner-1.png">
+    <section class="page-title"  data-bg-img="images/bg/contact-banner-5.jpg">
       <div class="container">
         <div class="row justify-content-center text-center">
           <div class="col-lg-8">
             <div class="theme-breadcrumb-box">
-            <h1>Contact Us</h1>
-            <nav aria-label="breadcrumb" class="page-breadcrumb">
-              <ol class="breadcrumb">
-                <!-- <li class="breadcrumb-item"><a href="index.html"><i class="las la-home me-1"></i>Home</a>
-                </li> -->
-                <!-- <li class="breadcrumb-item active" aria-current="page">Contact Us</li> -->
-              </ol>
-            </nav>
+            <h1 style="color:white">Contact Us</h1>
+           
             </div>
           </div>
         </div>
