--- a/header.html
+++ b/header.html
@@ -555,7 +555,7 @@
                   </a> -->
 
                 </div>
-              </div> -->
+              </div>
               <div class="button-container-anmIcon">
                 <a class="primary-btn-anmIcon" href="#">
                   <span class="btn-text-anmIcon">Get a Proposal</span>
