--- a/header.html
+++ b/header.html
@@ -683,9 +683,9 @@
                       src="images/fast-forward.gif"
                       alt="Fast Forward Icon"
                     />
-                  </a> -->
+                  </a> 
 
-                </div>
+                </div>-->
               </div>
               <div class="button-container-anmIcon">
                 <a class="primary-btn-anmIcon" href="#">
