"Updated live server port, CSS color, and HTML content in index.html"

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                       </div>
                     </div>
                     <div class="theme-progress-bar">
-                      <h4 class="h4-progress">Years Of Industry Presence</h4>
+                      <h4 class="h4-progress">Years of Industry Presence</h4>
                       <div class="progress" data-value="100">
                         <div class="progress-bar">
                           <div class="progress-parcent"><span>15</span>+</div>
@@ -325,14 +325,15 @@
 
         
         <!--services start-->
-
+<br><br
         <section class="pt-3 pb-0">
           <div class="container">
             <div class="row justify-content-center text-center mb-5">
               <div class="col-lg-8 col-md-12">
                 <div class="theme-title">
-                  <h6>Why Choose Us</h6>
-                  <h5>SMI has a strong customer success record in digital transformation, data management, process automation, and complex systems integration for application development and support.</h5>
+                  <h6 style="font-size: 35px;">Why Choose Us</h6>
+                  <br>
+                  <h5 style="font-size: 18px;">SMI has a strong customer success record in digital transformation, data management, process automation, and complex systems integration for application development and support.</h5>
                 </div>
               </div>
             </div>
